# HROVER

./: .gitignore  CLAUDE.md  build_installer.bat  hrover.spec  installer.iss  pyproject.toml
src/hrover/: __init__.py  __main__.py  cli.py  gpx_parser.py  gui.py  hr_data.py  overlay.py  sync.py  video_processor.py
